<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/title_activity_maps" />

        <item
            android:id="@+id/nav_lat_long"
            android:icon="@drawable/ic_my_location_black_24dp"
            android:title="@string/lat_long"/>

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/foto"/>

        <item
            android:id="@+id/nav_db"
            android:icon="@drawable/database"
            android:title="@string/db"/>

        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_help"
            android:title="@string/ajuda"/>
    </group>
</menu>